add persistence to all
