# smartbar-backoffice/src/main/java/org/example/smartbar/backoffice/api/CategoriesResource.java
@@ -1,46 +1,0 @@
-package org.example.smartbar.backoffice.api;
-
-import io.smallrye.common.annotation.NonBlocking;
-import jakarta.inject.Inject;
-import org.example.smartbar.backoffice.CategoriesService;
-import org.example.smartbar.backoffice.api.model.Category;
-import jakarta.ws.rs.core.Response;
-
-import java.net.URI;
-import java.util.List;
-
-@NonBlocking
-public class CategoriesResource implements CategoriesApi {
-
-    private final CategoriesService categoriesService;
-
-    @Inject
-    public CategoriesResource(CategoriesService categoriesService) {
-        this.categoriesService = categoriesService;
-    }
-
-    @Override
-    public Response categoriesCategoryIdDelete(String categoryId) {
-        return Response.ok().build();
-    }
-
-    @Override
-    public Response categoriesCategoryIdGet(String categoryId) {
-        return Response.ok(categoriesService.get()).build();
-    }
-
-    @Override
-    public Response categoriesCategoryIdPut(String categoryId, Category category) {
-        return Response.ok().build();
-    }
-
-    @Override
-    public Response categoriesGet() {
-        return Response.ok(List.of(categoriesService.get())).build();
-    }
-
-    @Override
-    public Response categoriesPost(Category category) {
-        return Response.created(URI.create("todo")).build();
-    }
-}
